# snyk-test-python-demo

./: pyproject.toml
.github/workflows/: security.yml
