[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.isort]
known_first_party = ["celsus_pkg"]
line_length = 120
py_version=38
profile = "black"

[tool.poetry]
name = "test"
version = "0.1.0"
description = "test"
authors = ["Mitsuhiro Kajitani <mitsuhiro.kajitani@snyk.io>"]

